Update index.html - updatelegend5

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       width: 18px;
       height: 18px;
       border-radius: 50%;
-      background: black;
+      background: none;
       color: white;
       font-weight: bold;
       text-align: center;
@@ -216,15 +216,15 @@
       position: absolute;
       top: 6px;
       right: 6px;
-      width: 26px;
-      height: 26px;
-      background: #ccc;
+      width: 20px;
+      height: 20px;
+      background: #eee;
       color: #333;
-      border-radius: 4px;
+      border-radius: 3px;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 16px;
       text-align: center;
-      line-height: 26px;
+      line-height: 20px;
       cursor: pointer;
       user-select: none;
       box-shadow: 0 1px 3px rgba(0,0,0,0.2);
