Update index.html - updatelegend6

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       width: 18px;
       height: 18px;
       border-radius: 50%;
-      background: none;
+      background: white;
       color: white;
       font-weight: bold;
       text-align: center;
@@ -193,7 +193,7 @@
       left: 8px;
       width: 20px;
       height: 20px;
-      background: black;
+      background: none;
       color: white;
       border-radius: 50%;
       font-weight: bold;
@@ -288,11 +288,12 @@
       <div class="color-box" style="background:#d73027"></div>
     </div>
     <div class="legend-labels">
-      <span class="legend-label-left">0 (niet geschikt)</span>
+      <span class="legend-label-left">0 </span>
       <span class="legend-label-right">10 (uiterst geschikt)</span>
     </div>
     <div class="legend-info" id="legend-info" style="display: none;">
-      De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.
+      De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast. 
+      0 = niet geschikt | 10 = uiterst geschikt
     </div>
   </div>
 </div>
