Update index.html - newlegend

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       height: 18px;
       border-radius: 50%;
       background: white;
-      color: white;
+      color: none;
       font-weight: bold;
       text-align: center;
       line-height: 18px;
@@ -289,7 +289,7 @@
     </div>
     <div class="legend-labels">
       <span class="legend-label-left">0 </span>
-      <span class="legend-label-right">10 (uiterst geschikt)</span>
+      <span class="legend-label-right">10</span>
     </div>
     <div class="legend-info" id="legend-info" style="display: none;">
       De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast. 
