Update index.html - update controlbox

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       height: 18px;
       border-radius: 50%;
       background: white;
-      color: none;
+      color: black;
       font-weight: bold;
       text-align: center;
       line-height: 18px;
@@ -231,17 +231,17 @@
       z-index: 1200;
     }
   </style>
-  <title>Locatievinder Fitness Center</title>
+  <title>Locatievinder Fitnesscentra</title>
 </head>
 <body>
 
 <div id="header-container">
   <img id="logo" src="data/NewLogo21.png" alt="Logo" />
-  <div id="page-title">Locatievinder Fitness Center</div>
+  <div id="page-title">Locatievinder Fitnesscentra</div>
 </div>
 
 <div class="control-box" id="control-box">
-  <label for="weight-fitness">Nabijgelegen fitnesscentra:
+  <label for="weight-fitness">Nabijheid fitnesscentra:
     <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
     <span id="percent-fitness">30%</span>
   </label>
