--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
       margin-left: 0;
       margin-right: 0;
     }
+    .control-box-title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #2C3E83; /* of een kleur die past bij je design */
+}
     #transparency-label {
       margin-top: 10px;
       user-select: none;
@@ -241,6 +247,8 @@
 </div>
 
 <div class="control-box" id="control-box">
+ <h2 class="control-box-title">Wegingsfactoren MCA</h2>
+
   <label for="weight-fitness">Nabijheid fitnesscentra:
     <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
     <span id="percent-fitness">30%</span>
@@ -253,17 +261,18 @@
     <input type="range" min="0" max="1" step="0.01" id="weight-pop" value="0.50" />
     <span id="percent-pop">50%</span>
   </label>
-  <label id="transparency-label" for="transparency-slider">Raster transparantie:
-    <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
-    <span id="percent-transparency">50%</span>
-  </label>
-
+  
   <button id="update-btn" type="button">Update suitability index
     <div id="info-icon">i</div>
     <div id="info-text">De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.</div>
   </button>
   <button id="reset-btn" type="button">Reset</button>
-  <button id="close-menu-btn" type="button" style="margin-top: 10px;">Sluit menu</button>
+  <button id="close-menu-btn" type="button" style="margin-top: 10px;">Minimaliseer menu</button>
+  
+    <label id="transparency-label" for="transparency-slider">Raster transparantie:
+    <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
+    <span id="percent-transparency">50%</span>
+  </label>
 </div>
 
 <button id="toggle-menu-btn">Open locatievinder menu</button>
