--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
   <link rel="stylesheet" href="css/leaflet.css" />
   <link rel="icon" href="data/1-aafea2ea.ico" type="image/ico" />
-  
   <style>
     html, body {
       width: 100%; height: 100%; margin: 0; padding: 0;
@@ -242,12 +241,6 @@
 </head>
 <body>
 
-<input type="text" id="searchInput" placeholder="Zoek gemeente..." onkeyup="filterGemeenten()">
-
-<ul id="gemeentenList" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 5px;">
-  <!-- Gemeenten worden hier dynamisch geladen -->
-</ul>
-  
 <div id="header-container">
   <img id="logo" src="data/NewLogo21.png" alt="Logo" />
   <div id="page-title">Locatievinder Fitnesscentra</div>
@@ -535,105 +528,45 @@ document.getElementById('legend-toggle').addEventListener('click', function () {
     }
   });
 
-let gemeenteFeatures = [];  // Hier slaan we alle gemeente features in op
-
 fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
   .then(response => response.json())
   .then(gemeenteData => {
-    // Voeg de gemeentelagen toe aan de kaart
-    const gemeenteLayer = L.geoJSON(gemeenteData, {
-      filter: feature => feature.properties.gemeentenaam !== "Utrecht",
-      style: {
-        color: "#555",
-        weight: 1,
-        fillColor: "#f7f7f7",
-        fillOpacity: 0.3
-      },
-      onEachFeature: function (feature, layer) {
-        layer.bindTooltip(feature.properties.gemeentenaam, { sticky: true });
+  const gemeenteLayer = L.geoJSON(gemeenteData, {
+    filter: feature => feature.properties.gemeentenaam !== "Utrecht",
+    style: {
+      color: "#555",
+      weight: 1,
+      fillColor: "#f7f7f7",
+      fillOpacity: 0.3
+    },
+    onEachFeature: function (feature, layer) {
+      // Tooltip verschijnt alleen bij hover
+      layer.bindTooltip(feature.properties.gemeentenaam, {
+        sticky: true
+      });
 
-        layer.on({
-          mouseover: function (e) {
-            e.target.setStyle({ weight: 2, color: '#000', fillOpacity: 0.5 });
-            e.target.openTooltip();
-          },
-          mouseout: function (e) {
-            gemeenteLayer.resetStyle(e.target);
-            e.target.closeTooltip();
-          }
-        });
-      }
-    }).addTo(map);
-
-    // Sla de features op voor later gebruik in zoekfunctie
-    gemeenteFeatures = gemeenteData.features;
-
-    // Vul de gemeentenlijst met alle gemeenten uit de data
-    vulGemeentenLijst(gemeenteFeatures);
-  })
+      layer.on({
+        mouseover: function (e) {
+          e.target.setStyle({
+            weight: 2,
+            color: '#000',
+            fillOpacity: 0.5
+          });
+          // Tooltip opent automatisch bij hover, maar voor zekerheid:
+          e.target.openTooltip();
+        },
+        mouseout: function (e) {
+          gemeenteLayer.resetStyle(e.target);
+          e.target.closeTooltip();
+        }
+      });
+    }
+  }).addTo(map);
+})
   .catch(error => {
     console.error("Fout bij het laden van gemeentekaart:", error);
   });
 
-// Functie om de gemeentenlijst te vullen
-function vulGemeentenLijst(features) {
-  const gemeentenList = document.getElementById('gemeentenList');
-  gemeentenList.innerHTML = '';
-
-  // Haal unieke gemeentennamen op, sorteer ze
-  const gemeenten = [...new Set(features.map(f => f.properties.gemeentenaam))].sort();
-
-  gemeenten.forEach(gemeente => {
-    const li = document.createElement('li');
-    li.textContent = gemeente;
-    li.style.cursor = 'pointer';
-
-    // Zoom naar de gemeente bij klikken op naam
-    li.addEventListener('click', () => {
-      const feature = gemeenteFeatures.find(f => f.properties.gemeentenaam === gemeente);
-      if (!feature) return;
-
-      // Zoom naar de bounds van de geselecteerde gemeente
-      const geojsonLayer = L.geoJSON(feature);
-      map.fitBounds(geojsonLayer.getBounds());
-
-      // Optioneel: highlight de gemeente polygon
-      highlightGemeente(feature);
-    });
-
-    gemeentenList.appendChild(li);
-  });
-}
-
-// Highlight functie (optioneel)
-let highlightedLayer;
-function highlightGemeente(feature) {
-  if (highlightedLayer) {
-    map.removeLayer(highlightedLayer);
-  }
-  highlightedLayer = L.geoJSON(feature, {
-    style: {
-      color: '#ff7800',
-      weight: 3,
-      fillOpacity: 0.5
-    }
-  }).addTo(map);
-}
-
-// Filterfunctie voor zoeken
-function filterGemeenten() {
-  const filter = document.getElementById('searchInput').value.toLowerCase();
-  const items = document.getElementById('gemeentenList').getElementsByTagName('li');
-
-  for (let i = 0; i < items.length; i++) {
-    const item = items[i];
-    if (item.textContent.toLowerCase().includes(filter)) {
-      item.style.display = '';
-    } else {
-      item.style.display = 'none';
-    }
-  }
-}
 </script>
 </body>
 </html>
