Update index.html - Update slidermenu2

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
       user-select: none;
     }
     #reset-btn, #update-btn {
-      margin-top: 8px;
+      margin-top: 6px;
       width: 100%;
       padding: 7px;
-      font-size: 14px;
+      font-size: 12px;
       background: #333;
-      color: white;
+      color: #2C3E83;
       border: none;
       border-radius: 4px;
       cursor: pointer;
@@ -276,7 +276,7 @@
     <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
     <span id="percent-transparency">50%</span>
   </label>
-  <button id="close-menu-btn" type="button" style="margin-top: 10px;">Minimaliseer menu</button>
+  <button id="close-menu-btn" type="button" style="margin-top: 8px;">Minimaliseer menu</button>
 </div>
 
 <button id="toggle-menu-btn">Open locatievinder menu</button>
