--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       width: 100%;
       padding: 7px;
       font-size: 12px;
-      background: #333;
-      color: #2C3E83;
+      background: #2C3E83;
+      color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
