--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   gap: 10px; /* minder afstand tussen items */
 }
 .control-box-title {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
-  margin-bottom: 6px; /* minder ruimte onder titel */
+  margin-bottom: 5px; /* minder ruimte onder titel */
   color: #2C3E83;
 }
 .control-box label {
@@ -83,12 +83,6 @@
   height: 18px;
   margin-left: 0;
   margin-right: 0;
-}
-    .control-box-title {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #2C3E83; /* of een kleur die past bij je design */
 }
     #transparency-label {
       margin-top: 10px;
@@ -253,7 +247,7 @@
 </div>
 
 <div class="control-box" id="control-box">
- <h2 class="control-box-title">Wegingsfactoren MCA</h2>
+ <h2 class="control-box-title">Wegingsfactoren Multicriteria Analyse (MCA)</h2>
 
   <label for="weight-fitness">Nabijheid fitnesscentra:
     <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
@@ -304,7 +298,7 @@
       <span class="legend-label-right">10</span>
     </div>
     <div class="legend-info" id="legend-info" style="display: none;">
-      De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast. 
+      De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 
       0 = niet geschikt | 10 = uiterst geschikt
     </div>
   </div>
