--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       bottom: 10px;
       left: 10px;
       padding: 8px 12px;
-      background: white;
+      background: rgba(255, 255, 255, 0.7);
       font-size: 12px;
       border-radius: 6px;
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
@@ -217,28 +217,9 @@
       line-height: 1.3;
       display: none;
     }
-    /* Minimaliseerknop rechtsboven in legend met grijs vierkant */
-    #legend-toggle {
-      position: absolute;
-      top: 6px;
-      right: 6px;
-      width: 20px;
-      height: 20px;
-      background: #eee;
-      color: #333;
-      border-radius: 3px;
-      font-weight: bold;
-      font-size: 16px;
-      text-align: center;
-      line-height: 20px;
-      cursor: pointer;
-      user-select: none;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-      z-index: 1200;
-    }
 .leaflet-control-layers {
-  top: 20px !important; /* net onder de zoomknoppen */
-  right: 6px !important;
+  top: 16px !important; /* net onder de zoomknoppen */
+  right: 5px !important;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 6px;
   padding: 6px 10px;
@@ -288,7 +269,6 @@
 
 <div class="legend" id="legend">
   <div id="legend-info-toggle" title="Toon uitleg">ℹ️</div>
-  <div id="legend-toggle" title="Minimaliseer legenda">−</div>
   <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legenda</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
