--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
       display: none;
     }
 .leaflet-control-layers {
-  top: 15px !important; /* net onder de zoomknoppen */
-  right: 4px !important;
+  top: 12px !important; /* net onder de zoomknoppen */
+  right: 3.5px !important;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 6px;
   padding: 6px 10px;
@@ -261,24 +261,19 @@
     <span id="percent-transparency">50%</span>
   </label>
   <button id="close-menu-btn" type="button" style="margin-top: 8px;">Minimaliseer menu</button>
-</div>
-<!-- Bronvermelding -->
-  <div style="font-size: 8px; color: #999; margin-top: 10px; text-align: center; user-select: none;">
+    <div style="font-size: 8px; color: #999; margin-top: 10px; text-align: center; user-select: none;">
     Data bronnen: 
     <a href="https://www.cbs.nl/" target="_blank" rel="noopener noreferrer" style="color: #999; text-decoration: underline;">CBS</a>, 
     <a href="https://www.openstreetmap.org" target="_blank" rel="noopener noreferrer" style="color: #999; text-decoration: underline;">OpenStreetMap</a>
-  </div>
 </div>
+
 <button id="toggle-menu-btn">Open locatievinder menu</button>
 
 <div id="map"></div>
 
 <div class="legend" id="legend">
-  <div id="legend-info-toggle" title="De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 
-      0 = niet geschikt | 10 = uiterst geschikt">ℹ️</div>
+  <div id="legend-info-toggle" title="De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt">ℹ️</div>
    <div class="legend-info" id="legend-info" style="display: none;">
-      De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 
-      0 = niet geschikt | 10 = uiterst geschikt
   </div>
   <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legenda</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
@@ -298,7 +293,6 @@
       <span class="legend-label-right">10</span>
     </div>
 </div>
-
 
 <script src="js/leaflet.js"></script>
 <script>
