--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       bottom: 10px;
       left: 10px;
       padding: 8px 12px;
-      background: rgba(255, 255, 255, 0.7);
+      background: white;
       font-size: 12px;
       border-radius: 6px;
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
@@ -217,10 +217,29 @@
       line-height: 1.3;
       display: none;
     }
+    /* Minimaliseerknop rechtsboven in legend met grijs vierkant */
+    #legend-toggle {
+      position: absolute;
+      top: 6px;
+      right: 6px;
+      width: 20px;
+      height: 20px;
+      background: #eee;
+      color: #333;
+      border-radius: 3px;
+      font-weight: bold;
+      font-size: 16px;
+      text-align: center;
+      line-height: 20px;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+      z-index: 1200;
+    }
 .leaflet-control-layers {
-  top: 12px !important; /* net onder de zoomknoppen */
-  right: 3.5px !important;
-  background: rgba(255, 255, 255, 0.9);
+  top: 14px !important; /* net onder de zoomknoppen */
+  right: 4px !important;
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 6px;
   padding: 6px 10px;
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
@@ -261,10 +280,6 @@
     <span id="percent-transparency">50%</span>
   </label>
   <button id="close-menu-btn" type="button" style="margin-top: 8px;">Minimaliseer menu</button>
-    <div style="font-size: 8px; color: #999; margin-top: 10px; text-align: center; user-select: none;">
-    Data bronnen: 
-    <a href="https://www.cbs.nl/" target="_blank" rel="noopener noreferrer" style="color: #999; text-decoration: underline;">CBS</a>, 
-    <a href="https://www.openstreetmap.org" target="_blank" rel="noopener noreferrer" style="color: #999; text-decoration: underline;">OpenStreetMap</a>
 </div>
 
 <button id="toggle-menu-btn">Open locatievinder menu</button>
@@ -273,8 +288,7 @@
 
 <div class="legend" id="legend">
   <div id="legend-info-toggle" title="De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt">ℹ️</div>
-   <div class="legend-info" id="legend-info" style="display: none;">
-  </div>
+  <div id="legend-toggle" title="Minimaliseer legenda">−</div>
   <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legenda</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
@@ -292,6 +306,10 @@
       <span class="legend-label-left">0 </span>
       <span class="legend-label-right">10</span>
     </div>
+    <div class="legend-info" id="legend-info" style="display: none;">
+      De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt
+    </div>
+  </div>
 </div>
 
 <script src="js/leaflet.js"></script>
@@ -385,7 +403,6 @@ const overlays = {
 
 L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
 
-
   fetch('data/gridlayer_mca_fitness.geojson')
     .then(res => res.json())
     .then(data => {
@@ -470,14 +487,14 @@ L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
     document.getElementById('weight-fitness').value = 0.3;
     document.getElementById('weight-ov').value = 0.2;
     document.getElementById('weight-pop').value = 0.5;
-    document.getElementById('transparency-slider').value = 0.7;
+    document.getElementById('transparency-slider').value = 0.5;
 
     document.getElementById('percent-fitness').textContent = '30%';
     document.getElementById('percent-ov').textContent = '20%';
     document.getElementById('percent-pop').textContent = '50%';
     document.getElementById('percent-transparency').textContent = '70%';
 
-    currentTransparency = 0.7;
+    currentTransparency = 0.5;
     if (layer_group) {
       layer_group.setStyle(layer => ({
         ...styleFeature(layer.feature)
@@ -529,9 +546,6 @@ document.getElementById('legend-toggle').addEventListener('click', function () {
       this.title = 'Toon uitleg';
     }
   });
-
-
-
 fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
   .then(response => response.json())
   .then(gemeenteData => {
@@ -548,7 +562,6 @@ fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/dat
       layer.bindTooltip(feature.properties.gemeentenaam, {
         sticky: true
       });
-
       layer.on({
         mouseover: function (e) {
           e.target.setStyle({
@@ -570,7 +583,7 @@ fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/dat
   .catch(error => {
     console.error("Fout bij het laden van gemeentekaart:", error);
   });
-  
+
 </script>
 </body>
 </html>
